creating simple API

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "id": "813845eb",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 98,
    "id": "ee33c744",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
    "id": "86cffb5f",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 100,
    "id": "fbaa1a81",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 101,
    "id": "17ed6f9a",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 102,
    "id": "eb64b16d",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 103,
    "id": "381353f9",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 104,
    "id": "d85f37e6",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 105,
    "id": "c6e5cdce",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "id": "4e0e5fc9",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "id": "260afc2e",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 108,
    "id": "af7aba3f",
    "metadata": {},
    "outputs": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 109,
    "id": "3ce02aaf",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 110,
    "id": "e8fc1f05",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 111,
    "id": "add80f10",
    "metadata": {},
    "outputs": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 112,
    "id": "ba4f7d8b",
    "metadata": {},
    "outputs": [
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 113,
    "id": "2ded96dc",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 114,
    "id": "4dc722f8",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 115,
    "id": "0718ca3c",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 116,
    "id": "953f58ec",
    "metadata": {},
    "outputs": [
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 117,
    "id": "d039f758",
    "metadata": {},
    "outputs": [
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 118,
    "id": "4421c6b8",
    "metadata": {},
    "outputs": [
@@ -1709,18 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "1e10c2ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cleaning description function, it convert it into lowercase.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "96afa4fc",
    "metadata": {},
    "outputs": [
@@ -1737,14 +1726,10 @@
    ],
    "source": [
     "from collections import Counter\n",
-    "from wordcloud import STOPWORDS \n",
     "\n",
     "from utils import clean_description, clean_title, clean_genres\n",
     "\n",
     "# creating a set of the stopwords (the, is, in...)\n",
-    "stop_words = set(STOPWORDS)\n",
-    "# updating the stop words to include the following\n",
-    "stop_words.update([\"movie\", \"film\", \"series\", \"show\", \"season\", \"episode\"])\n",
     "\n",
     "\n",
     "# emppty list to store all filtered words from all descriptions\n",
@@ -1782,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 121,
    "id": "0535072f",
    "metadata": {},
    "outputs": [
@@ -1880,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 122,
    "id": "5a601684",
    "metadata": {},
    "outputs": [],
@@ -1902,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 123,
    "id": "f71771c5",
    "metadata": {},
    "outputs": [],
@@ -1926,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 124,
    "id": "04b359b4",
    "metadata": {},
    "outputs": [
@@ -1965,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 125,
    "id": "8e352850",
    "metadata": {},
    "outputs": [
@@ -2007,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 126,
    "id": "8af736cb",
    "metadata": {},
    "outputs": [
@@ -2069,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 127,
    "id": "51bfb1e7",
    "metadata": {},
    "outputs": [
@@ -2147,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 128,
    "id": "710969e4",
    "metadata": {},
    "outputs": [
@@ -2176,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 129,
    "id": "c052f3fa",
    "metadata": {},
    "outputs": [],
@@ -2186,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 130,
    "id": "05214c58",
    "metadata": {},
    "outputs": [],
@@ -2207,7 +2192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 131,
    "id": "e3fb81b2",
    "metadata": {},
    "outputs": [
@@ -2468,10 +2453,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "2809466f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success! Model saved as 'recommender_model.pkl'\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "\n",
@@ -2484,7 +2477,8 @@
     "    'df': all_titles_clean,       # The Database (DataFrame)\n",
     "    'tfidf': tfidf,               # The Translator (Vectorizer)\n",
     "    'matrix': tfidf_matrix,       # The Map (TF-IDF Matrix)\n",
-    "    'knn': knn                    # The Navigator (KNN Model)\n",
+    "    'knn': knn,                    # The Navigator (KNN Model)\n",
+    "    'indices': indices\n",
     "}\n",
     "\n",
     "# 3. Save it to a file\n",
