--- a/backend/project.ipynb
+++ b/backend/project.ipynb
@@ -2119,7 +2119,7 @@
    "id": "99c3b7ba",
    "metadata": {},
    "source": [
-    "# Modeling"
+    "# Training the model using K-NN"
    ]
   },
   {
