fixes some bugs

--- a/backend/project.ipynb
+++ b/backend/project.ipynb
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "3ce02aaf",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
     }
    ],
    "source": [
-    "print(f'Couting duplicates in each column:\\n{all_titles_duplicates_free.isna().sum()}')"
+    "print(f'Counting null values in each column:\\n{all_titles_duplicates_free.isna().sum()}')"
    ]
   },
   {
@@ -2453,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "id": "2809466f",
    "metadata": {},
    "outputs": [
@@ -2468,20 +2468,19 @@
    "source": [
     "import pickle\n",
     "\n",
-    "# 1. Define the filename\n",
+    "\n",
     "filename = 'recommender_model.pkl'\n",
     "\n",
-    "# 2. Bundle everything you need into a dictionary\n",
-    "# (Make sure these variable names match what you used in your notebook!)\n",
+    "\n",
     "data_to_save = {\n",
-    "    'df': all_titles_clean,       # The Database (DataFrame)\n",
-    "    'tfidf': tfidf,               # The Translator (Vectorizer)\n",
-    "    'matrix': tfidf_matrix,       # The Map (TF-IDF Matrix)\n",
-    "    'knn': knn,                    # The Navigator (KNN Model)\n",
+    "    'df': all_titles_clean,       \n",
+    "    'tfidf': tfidf,               \n",
+    "    'matrix': tfidf_matrix,      \n",
+    "    'knn': knn, \n",
     "    'indices': indices\n",
     "}\n",
     "\n",
-    "# 3. Save it to a file\n",
+    "\n",
     "with open(filename, 'wb') as f:\n",
     "    pickle.dump(data_to_save, f)\n",
     "\n",
